Use new Java Files API to read files